force mobile view, navigation hidden by default, copied from mobile.css, fix #2

--- a/css/style.css
+++ b/css/style.css
@@ -219,3 +219,49 @@ table#trackingDevices {
 	height: 30px;
 	padding: 6px;
 }
+
+
+/* Force mobile view, navigation hidden by default, copied from mobile.css */
+/* APP SIDEBAR TOGGLE and SWIPE ----------------------------------------------*/
+
+#app-navigation,
+#app-content {
+	position: absolute !important;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
+#app-navigation {
+	width: 250px !important;
+}
+
+#app-content {
+	width: 100% !important;
+	left: 0 !important;
+	background-color: #fff;
+	overflow-x: hidden !important;
+	z-index: 1000;
+}
+
+#app-sidebar{
+	width: 100% !important;
+}
+
+#app-navigation-toggle {
+	position: absolute;
+	display: inline-block !important;
+	top: 0;
+	left: 0;
+	width: 44px;
+	height: 44px;
+	z-index: 149;
+	background-color: rgba(255, 255, 255, .7);
+	cursor: pointer;
+	opacity: .6;
+}
+#app-navigation-toggle:hover,
+#app-navigation-toggle:focus {
+	opacity: 1;
+}
